Attempted to edit note. Not successful.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <form id='notes-form' class='form'>
       <div class='input-field'>
         <label for="notes-input">Create a new note:</label>
-        <input type="text" id='notes-input'>
+        <input type="text" id='notes-input' maxlength="100">
       </div>
       <div class='input-field'>
         <button type='submit' class='button'>Add note</button>
